# ChangeLog for sys-kernel/hardened-sources
# Copyright 1999-2012 Gentoo Foundation; Distributed under the GPL v2
# $Header: /usr/local/ssd/gentoo-x86/output/sys-kernel/cvs-repo/gentoo-x86/sys-kernel/hardened-sources/ChangeLog,v 1.636 2012/07/19 11:10:57 blueness Exp $

*hardened-sources-3.2.23-r1 (19 Jul 2012)

  19 Jul 2012; Anthony G. Basile <blueness@gentoo.org>
  +hardened-sources-3.2.23-r1.ebuild:
  Based on 3.2.23 + genpatches-3.2-16 + grsecurity-2.9.1-3.2.23-201207171624

*hardened-sources-2.6.32-r116 (19 Jul 2012)

  19 Jul 2012; Anthony G. Basile <blueness@gentoo.org>
  +hardened-sources-2.6.32-r116.ebuild:
  Based on 2.6.32.59 + genpatches-2.6.32-48 +
  grsecurity-2.9.1-2.6.32.59-201207161806

  16 Jul 2012; Anthony G. Basile <blueness@gentoo.org> ChangeLog:
  Fix failed signiture on manifest

*hardened-sources-3.4.4-r3 (16 Jul 2012)

  16 Jul 2012; Anthony G. Basile <blueness@gentoo.org>
  +hardened-sources-3.4.4-r3.ebuild:
  Based on 3.4.4 + genpatches-3.4-5 + grsecurity-2.9.1-3.4.4

*hardened-sources-3.2.23 (16 Jul 2012)

  16 Jul 2012; Anthony G. Basile <blueness@gentoo.org>
  +hardened-sources-3.2.23.ebuild:
  Based on 3.2.23 + genpatches-3.2-16 + grsecurity-2.9.1-3.2.23-201207122159

*hardened-sources-2.6.32-r115 (16 Jul 2012)

  16 Jul 2012; Anthony G. Basile <blueness@gentoo.org>
  +hardened-sources-2.6.32-r115.ebuild:
  Based on 2.6.32.59 + genpatches-2.6.32-48 +
  grsecurity-2.9.1-2.6.32.59-201207150915

*hardened-sources-3.4.4-r2 (11 Jul 2012)

  11 Jul 2012; Anthony G. Basile <blueness@gentoo.org>
  +hardened-sources-3.4.4-r2.ebuild:
  Based on 3.4.4 + genpatches-3.4-5 + grsecurity-2.9.1-3.4.4-201207080925

*hardened-sources-3.2.22 (11 Jul 2012)

  11 Jul 2012; Anthony G. Basile <blueness@gentoo.org>
  +hardened-sources-3.2.22.ebuild:
  Based on 3.2.22 + genpatches-3.2-16 + grsecurity-2.9.1-3.2.22-201207080924

*hardened-sources-2.6.32-r114 (11 Jul 2012)

  11 Jul 2012; Anthony G. Basile <blueness@gentoo.org>