@@ -23,6 +23,8 @@ DIST genpatches-3.4-4.base.tar.bz2 68493 RMD160 3f629902fff824dba23d0e3e249cac15
 DIST genpatches-3.4-4.extras.tar.bz2 17508 RMD160 b8b83573526b50f38768bb9b51d9ed0941de2dfd SHA1 413a4d2cb7adaab147488a69941f9c4a4731a3c1 SHA256 be8e087b3a0508e88bd36d2d4bec07e0756a3e7f7b31de4dbfd51d79412c2a96
 DIST genpatches-3.4-5.base.tar.bz2 83423 SHA256 4ee8ef2834f0993536188ad2de8f6d3eddac963cc935c1d77eac4f98b99199eb SHA512 2ba00adf1235aa78d567abd73ed8cc269187141d4fcce8a65d72484229473ad01e3f9c69f8cd9e0c1c852108f5ea340c89946d5b83a00c133611718b45ff5144 WHIRLPOOL 01af51046dd8d6f240ccde7076d3bf08677545c1c2a9a47e2a5a59efb362f0e051fd3e8887e71fe282ec455cd63a32814722d57a962ffdcfaa26a5e6885683d3
 DIST genpatches-3.4-5.extras.tar.bz2 17502 SHA256 2b537431a408445cd1091562755234e840016f26ad63ab3a73812ac7f7e1c8d9 SHA512 29ca4fc4de0c1c87eabb2fa55ae856721ac10a4d70758efa9d90379f0b0b0c9def9cabcb50601a1d128471cf97d891ed0965486c85b4dc06dd9ac4058ed78ce4 WHIRLPOOL de947d2d305d79250922795c094db3d4a90d295d28e819fbf2c1c207ba365bf6cd194eb315935fa52f4b8cd135049d9838aad00cb52e7e4802ebbbd87eea61ab
+DIST genpatches-3.4-6.base.tar.bz2 145231 SHA256 34b7e934f849ef10d706ea2d81878ac91d95b45e029f3d059b484e43686cdc01 SHA512 16545b4358969cf34f97e8574999d64bf1c3425506a615170e76785bcf857821fcc65d3132b5e201ac0a044ddca0cdf3e4b6173cf9d489104a82f12db675ca82 WHIRLPOOL 8d4506e33fb27a1997e99a4d236a1664265a0b52e795fe01aba7e175e75d6a83ac31e0d314a983d9c6b296efefd208b784d1021fd5d805435344234b41c6c79a
+DIST genpatches-3.4-6.extras.tar.bz2 17508 SHA256 be8e087b3a0508e88bd36d2d4bec07e0756a3e7f7b31de4dbfd51d79412c2a96 SHA512 f84be04008f254509de7eb05c78fe040fa563038e8ba2744412296a54208c7889417f72ada0db8b21754e2db544fb921b75300728d48337bdc7a7dfa02cdcf26 WHIRLPOOL b0331d32d4ef74fd2357dfc2dc046562828f9bbbbd175412276d79d4097a11a6c91847ba364d8e84ffee361bfd868161951ae740ee232504d1ae4fbb9d87f74e
 DIST hardened-patches-2.6.32-112.extras.tar.bz2 740503 RMD160 e5a67e8ac524a63088ccad836df571974e549f3f SHA1 42165f7c93e3f4298284137100a698eabfedc6a2 SHA256 9e64b4792ec1c15813f35912f98e59d95af5099dee01f1843ae11cbf703445bd
 DIST hardened-patches-2.6.32-113.extras.tar.bz2 745346 RMD160 81161be1830a9d9daa3f986d26c47cbaa2d53636 SHA1 9a9b70a2a657c5803e68ba3808d06e472c9f694a SHA256 16882e05548d7afda8617fdb4df0784fa413aadb220b03e7ba70bd4e47324fcc
 DIST hardened-patches-2.6.32-114.extras.tar.bz2 743593 RMD160 c7af9f0149e3b61e722f7e53103dee51691fadbd SHA1 a18f8373e3490aee280f1d737385fbeb1284c080 SHA256 1d0ecb77532cfe999f548ef20a0dba0e17a5d6ef36a6becc1b3640c1850dd169
@@ -49,6 +51,7 @@ DIST hardened-patches-3.4.4-1.extras.tar.bz2 551869 RMD160 fd71e173f27758104223f
 DIST hardened-patches-3.4.4-3.extras.tar.bz2 548343 SHA256 1008c68a74e1282e2e21f3c4125298dab1e086f3c1ab92bb9aa81837513945c0 SHA512 17dfbba7c02528d4f4d8a645eb56f292e8bfd3404f742c8ae909be7fd331144e71f02f97231690c0afd1b5666add489ec5bde4712016fb9e78d526cadccbc615 WHIRLPOOL dee50214cee9271e442894f0ad879cfe24808e6f29d3ce4c90a9f0cc32e653d38fdf108c33edc4b7b7a0f60df85186f32e892a7b84cc5ef4ce7bc11e9374f123
 DIST hardened-patches-3.4.4-4.extras.tar.bz2 550548 SHA256 5d504f3459bf0d0423e4a4e9b4845a3f3f76fedc30b9d6b84509aa9519743baa SHA512 3cf95d264848f686b53ffdce64773a29640293c94a2bac4a118d450451fbea493535638dfc9090b41eac5c58f5e4d4f703745749dbbed742ada7274600d15a11 WHIRLPOOL b7fbc2f56fb9057706c3abc2c7cd36cae540869667528b2007f3b8af2893326a7a82654526a87411f5031dc5f827cad1acca0480fecdc23d20e2e11608fdbd3b
 DIST hardened-patches-3.4.4-5.extras.tar.bz2 549796 SHA256 8573cf85ea80a76718118749fb32ab691b0a9148a3daba5709e2dfd05d228527 SHA512 79f3398307dae24009decc939ea144c44dfd4870d18d6af953725811b6ba2e76f51ceca1f42ee192646f5e49e8f8c20e5d76296a723efce728c4e24e0c61a83b WHIRLPOOL 56657e02c3c7889e14f0104f74025eefb5e29b072f5b7f1c5bee806a1324319ab6f90440e1205f8f680c5e867622055f9f834352e4804590d48e764de0c03a8e
+DIST hardened-patches-3.4.5-1.extras.tar.bz2 548697 SHA256 f77fdd4450cfaa051058383d4c7bce9ae7cf40cc39948a265870c8806fcdc2ef SHA512 b5b516200e0f78f6695f70ae7f7918bbd813647439f2e1df0dc0545439724c18bd5f31379d99b09372cdc91d612ab0cfef3cdeade229425a936a3e2873a56c1f WHIRLPOOL 3bc4be49dbaf31bfc592098b3cbb6c43b7d027f97c0089bf6fa1b4b914cbea4189ab6b63bf38f8dbc1647f011dedc1aa901d1b0679da875a741ca12df9ba4433
 DIST linux-2.6.32.tar.bz2 64424138 SHA256 5099786d80b8407d98a619df00209c2353517f22d804fdd9533b362adcb4504e SHA512 739c67875dcb1a80412a034e7d3dddfb6aea4d7a77f12b572fb5afbb827e6ab5a682df7501c0982966e85948ddf7251b8dc5eeb064b2d264025160d8a903bc82 WHIRLPOOL 762dfd7f4c062fdcda00b7fc45ead0f8cb4e321027769a12d92640012f5768c2033da95f24491adfcd6eb453c2658978d4f170e73e4f8a5ccd263efcbe00429d
 DIST linux-3.2.tar.bz2 78147838 SHA256 c881fc2b53cf0da7ca4538aa44623a7de043a41f76fd5d0f51a31f6ed699d463 SHA512 1f57b98e8da34b10f37ce94e0f13a994c111d483b104c27a8f58a4a55013a73a9f1ffcebb597be63ce0dfadb92201e93b0e072ba49bac0033026aceb0840c812 WHIRLPOOL 3dc893bde09f064e4614183964a4b9feaab938ca7a739f46f825818a577884eae815f195b52a4c55c571345de59d7ba09631fb68dac481a0837b24868ce60e3d
 DIST linux-3.4.tar.bz2 80173484 SHA256 a797a15d0b6228381507c14ecf4eec4a6cc5c77cfd521ba3b3e1325e85b5b16d SHA512 597002fa82b70b5052f9e05c1d8547bc5f89d8e1aecfd1765f4033f6d2c5c02d51b6372dbeef12c2eb070ae318a04c39925050cb37a39399961c8b263479fca1 WHIRLPOOL 57e6dd7094db2bc41175d7bb551e8237ea96eacf3710a734e8413915c54304e84ca11455e41c7752882ce81048459555d44d1798bf0775b79c3d74b13aa3a9f2
@@ -78,13 +81,14 @@ EBUILD hardened-sources-3.4.4-r1.ebuild 1881 SHA256 30ba9f3d5b7f79927e8d7269e0aa
 EBUILD hardened-sources-3.4.4-r2.ebuild 1881 SHA256 45a2784f518a75de3176b2682a8c5326ee382c0c14cfd8f4f4ab052386c64ad5 SHA512 30736df1b65ca762ae5f44015eaa9b4049e4eee29c8e8faf4b86ec07888fa35d29bbc120c8e067ee573027942b82876d88175d587b940093624145b6eb538015 WHIRLPOOL 4d6a8941ddb3d9e4efb195997e874eb73759b74b85994fb694f69f7ffe815c0f560788c5c7d72692043e827b186ed4813eaaa50bee640be46c338bf827b15051
 EBUILD hardened-sources-3.4.4-r3.ebuild 1881 SHA256 d4d5ef755510db49bfd407638c61bb709b1b9aaec7f7929055890c65f2ea6e6f SHA512 673be9c2c7f2732b413b51778da7817176e5d384237093e436e4fa410e1f5a1e01ae6b0dae507668870e188cb43e2d85931710e57b0e77107dfdc1160dade186 WHIRLPOOL a21656ef58b6b788dc81186727bd292724d24142cc7b1c7a36c0501f301a712687206035ca8d61b402333b3790c0aa8a2860a4fd2a6d109c9d717ed0adde07bf
 EBUILD hardened-sources-3.4.4.ebuild 1811 SHA256 31aab25bd6e8c50d35c4ab3812d62e4aca5dc74aa525265e5a9913a284d1e9eb SHA512 8ea6f24211fbf3a57425dced7fbbefe7ddf3cab50465acf5b2fc14bf6e0df20ecc0473ed11d673adb060a06fb4439d2cdce4b6fd8213feec78efbdf908245b68 WHIRLPOOL 57673bbd4ca557f1e2aefca56dfea016db71303d030ffeb62e5af350c853a7d16ed20bd5b8dec9468db16a23f63a88c7e68a1518270d52be7e5552408e5695d2
-MISC ChangeLog 26625 SHA256 bd604b5d679b9b88726e339321e8a46671d15990303fd8b2bcbb271e3e83482d SHA512 f971676a818d6db1fa62ecd29263e76036796f6246683bee321b27af380e5a5c0fb8caee88a2a29df5b85719e7fb21035d7a1d7d5082d2b6b94fb9dccf960a64 WHIRLPOOL a0196c119461f497afbdfba1db97846b37730d399c9c4d3ee45c1299bd38bc9ce959a90f1c3067b18cb72dac0056e86939e3dda5e9ee657634993850c26f1f4c
+EBUILD hardened-sources-3.4.5.ebuild 1811 SHA256 14f30bccaf3f366374aabb5d2b4c9ce406f01a7985c855fc73e7bcd8a082ee20 SHA512 1a752fd7e11db93e95b9cf560a70034ccb354567c5eaf35f7015479377c9d8d07a4459ee7544a45366a04ee8738a105bf5c0ba2976b6803b8712f2d61434e448 WHIRLPOOL 97d337154b70d8ef0f22bbe42f8917cc4ebb67840391fd585a6b414eaba29c442e679edbb36256f2301ded1ed065675ac172325bb65e429b11dbcc66c1f2c0f3
+MISC ChangeLog 26828 SHA256 c18925be47010d592b5c7746e1a140a9f077b99beb1a864df5bcccd186282ae1 SHA512 153e435d250783546e197ca60a126b449f5fbd26972c570c9e6cb6ff73bf288b5f1f7bc91ebf65196a61f94847cad9bd71febd4b52bc4bd78233cae5b8be9c0d WHIRLPOOL bf5e4a13e2f3327b07eb3cc5f1cf2fb86dd06875cb292fa5311667bbb1829952d94c8648164a3cbd763bcd9d16db02c568364ddd16253ae1e3b25044cc06c482
 MISC ChangeLog-2011 112069 SHA256 39bac69a08709be5b79c6e711fd94aac7e53191b76fef64f9b3d09f7b5ac0f82 SHA512 3d66e844a3f619a530e7ff236cbbb095bf9150e1542048268646468afe09d1fb20da3ea8dfa4b80812f35f9eeed1e399a115ceb573cce43f34f1c30c0ff67ee5 WHIRLPOOL c55f94fc4655b77b9db447c8f315af698e5c180496f9a333e22aa16c57c172e26bf9dbb0a70d7319c1a54943bce4756d11679f3c3435cb90bf427a64e49ded34
 MISC metadata.xml 651 SHA256 614ce0d6e8cfcf0b4dbf344b2758f25375afdaadccbfa4f68c3f8f058218f0a6 SHA512 dee8d464fa50200cfa644187e2f471bdaf5c00a9b2620042301837a6f741aae84cfc0766a7d8c53bea39c57a08407519aedf5d7faae29f05870bfcca0a3e866a WHIRLPOOL 2e3adde4684d4c29f2cf23bdb9cff863198b4a5d251fc1472c74f9a3e5e9d6e80d235ea8622288474d73f40285de3f8b47b686812aac3b13abf0446c7c631449
 -----BEGIN PGP SIGNATURE-----
 Version: GnuPG v2.0.19 (GNU/Linux)
 
-iEYEAREIAAYFAlAH62cACgkQl5yvQNBFVTWXKwCbB34yLgcAcZFk73iC1tIAa+wR
-2a0AoIhUrNCS4Vcqdv+1kIor/J6dwW6Y
-=CgJ5
+iEYEAREIAAYFAlAH7DgACgkQl5yvQNBFVTU6rgCfUIRSW5fAqod/81ogOIfp0hqe
+AakAn34Urh3GAwyxceenAcynP8ciiFlO
+=ON/7
 -----END PGP SIGNATURE-----
