@@ -1,6 +1,12 @@
 # ChangeLog for sys-kernel/hardened-sources
 # Copyright 1999-2012 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /usr/local/ssd/gentoo-x86/output/sys-kernel/cvs-repo/gentoo-x86/sys-kernel/hardened-sources/ChangeLog,v 1.636 2012/07/19 11:10:57 blueness Exp $
+# $Header: /usr/local/ssd/gentoo-x86/output/sys-kernel/cvs-repo/gentoo-x86/sys-kernel/hardened-sources/ChangeLog,v 1.637 2012/07/19 11:14:50 blueness Exp $
+
+*hardened-sources-3.4.5 (19 Jul 2012)
+
+  19 Jul 2012; Anthony G. Basile <blueness@gentoo.org>
+  +hardened-sources-3.4.5.ebuild:
+  Based on 3.4.5 + genpatches-3.4-6 + grsecurity-2.9.1-3.4.5-201207171624
 
 *hardened-sources-3.2.23-r1 (19 Jul 2012)
 
